--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "koa-router": "13.0.1",
     "koa-session": "6.4.0",
     "koa-static": "^5.0.0",
-    "mongoose": "^8.9.1",
+    "mongoose": "8.9.5",
     "morgan": "1.10.0",
     "passport": "0.7.0",
     "passport-local": "1.0.0",
