--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@types/koa-static": "^4.0.4",
     "bcrypt": "^5.1.1",
-    "koa": "2.15.4",
+    "koa": "^2.16.1",
     "koa-bodyparser": "4.4.1",
     "koa-logger": "",
     "koa-mount": "^4.0.0",
